--- a/src/main/res/layout/fragment_all.xml
+++ b/src/main/res/layout/fragment_all.xml
@@ -8,14 +8,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.piyushrao.travelera.AllActivity$PlaceholderFragment">
 
-    <TextView
-        android:id="@+id/section_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
     <ListView
         android:id="@+id/list1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/section_label"
+        android:layout_toRightOf="@+id/section_label"
+        tools:layout_height="match_parent" />
 
 </RelativeLayout>
