--- a/src/main/res/layout/list1_layout.xml
+++ b/src/main/res/layout/list1_layout.xml
@@ -6,12 +6,11 @@
     <TextView
         android:id="@+id/textViewList1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/textViewList2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
