--- a/src/main/res/layout/activity_all.xml
+++ b/src/main/res/layout/activity_all.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@color/white"
     tools:context="com.example.piyushrao.travelera.AllActivity">
 
     <android.support.v4.view.ViewPager
