--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#008B8B</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#008B8B</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
 </resources>
