--- a/src/main/res/layout/activity_detail.xml
+++ b/src/main/res/layout/activity_detail.xml
@@ -107,10 +107,18 @@
 
     <ListView
         android:id="@+id/list2"
-        android:layout_width="0dp"
-        android:layout_height="551dp"
+        android:layout_width="372dp"
+        android:layout_height="166dp"
+        android:layout_marginBottom="2dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
         android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.888"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonRate"
-        tools:layout_editor_absoluteX="8dp" />
+        tools:layout_editor_absoluteY="397dp"
+        tools:layout_editor_absoluteX="7dp" />
 
 </android.support.constraint.ConstraintLayout>
