--- a/src/main/res/layout/activity_login.xml
+++ b/src/main/res/layout/activity_login.xml
@@ -12,22 +12,19 @@
         android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="66dp"
-        android:layout_marginStart="66dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="95dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="Enter Name" />
+        android:hint="Enter Name"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/enter_name_login"
         android:layout_width="300sp"
         android:layout_height="wrap_content"
         android:text="Enter"
-        android:layout_marginTop="81dp"
+        android:layout_marginTop="47dp"
         android:layout_below="@+id/editName"
         android:layout_centerHorizontal="true" />
 
