--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -16,20 +16,18 @@
         app:srcCompat="@drawable/homescreen" />
 
     <TextView
+        android:id="@+id/textViewMain2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:textColor="@color/white"
+        android:layout_above="@+id/search"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
         android:text="@string/Welcome"
-        tools:layout_editor_absoluteY="187dp"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="30sp"
         tools:layout_editor_absoluteX="105dp"
-        android:layout_marginBottom="22dp"
-        android:layout_alignBottom="@+id/imageView2"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="54dp"
-        android:layout_marginEnd="54dp"
-        android:id="@+id/textViewMain2" />
+        tools:layout_editor_absoluteY="187dp" />
 
     <Button
         android:id="@+id/search"
