--- a/src/main/res/layout/list2_layout.xml
+++ b/src/main/res/layout/list2_layout.xml
@@ -9,24 +9,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:textSize="15sp"
-        android:textColor="@color/black"
-        android:paddingTop="5sp"/>
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textViewCommentText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
+        android:paddingTop="5sp"
         android:text="TextView"
-        android:textSize="20sp"/>
+        android:textColor="@color/black"
+        android:textSize="15sp" />
 
     <TextView
         android:id="@+id/textViewCommentRating"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="10sp"
         android:text="TextView"
-        android:textSize="15sp"
         android:textColor="@color/colorPrimary"
-        android:paddingBottom="10sp"/>
+        android:textSize="15sp" />
 </LinearLayout>
