--- a/src/main/res/layout/activity_detail.xml
+++ b/src/main/res/layout/activity_detail.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
+        android:textStyle="italic"
         android:text="TextView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,6 +23,8 @@
         android:id="@+id/textViewDetail2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textStyle="bold"
         android:layout_marginLeft="16dp"
         android:text="TextView"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -47,6 +50,7 @@
         android:layout_marginRight="72dp"
         android:layout_marginTop="8dp"
         android:isIndicator="false"
+        android:progressTint="@color/colorPrimary"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewDetail4"
         android:layout_marginEnd="72dp" />
