--- a/src/main/res/layout/list2_layout.xml
+++ b/src/main/res/layout/list2_layout.xml
@@ -1,23 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/textViewCommentPerson"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textSize="15sp"
+        android:textColor="@color/black"
+        android:paddingTop="5sp"/>
 
     <TextView
         android:id="@+id/textViewCommentText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:textStyle="bold"
+        android:text="TextView"
+        android:textSize="20sp"/>
 
     <TextView
         android:id="@+id/textViewCommentRating"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textSize="15sp"
+        android:textColor="@color/colorPrimary"
+        android:paddingBottom="10sp"/>
 </LinearLayout>
